--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@nextui-org/modal": "^2.0.41",
     "@nextui-org/react": "^2.4.8",
+    "mongodb": "^6.10.0",
+    "mongoose": "^8.7.3",
     "next": "14.2.14",
     "react": "^18",
     "react-dom": "^18",
